; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libwiikeyboard/extr_keyboard.c_update_modifier.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libwiikeyboard/extr_keyboard.c_update_modifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEYBOARD_PRESSED = common dso_local global i64 0, align 8
@_modifiers = common dso_local global i32 0, align 4
@KEYBOARD_RELEASED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_modifier(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %3
  %10 = load i64, i64* %4, align 8
  %11 = load i64, i64* @KEYBOARD_PRESSED, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %17

13:                                               ; preds = %9
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @_modifiers, align 4
  %16 = xor i32 %15, %14
  store i32 %16, i32* @_modifiers, align 4
  br label %17

17:                                               ; preds = %13, %9
  br label %32

18:                                               ; preds = %3
  %19 = load i64, i64* %4, align 8
  %20 = load i64, i64* @KEYBOARD_RELEASED, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = load i32, i32* %6, align 4
  %24 = xor i32 %23, -1
  %25 = load i32, i32* @_modifiers, align 4
  %26 = and i32 %25, %24
  store i32 %26, i32* @_modifiers, align 4
  br label %31

27:                                               ; preds = %18
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* @_modifiers, align 4
  %30 = or i32 %29, %28
  store i32 %30, i32* @_modifiers, align 4
  br label %31

31:                                               ; preds = %27, %22
  br label %32

32:                                               ; preds = %31, %17
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
